--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -25,7 +25,7 @@
     display: block;
     background: #696969;
     padding: 10px 10px 10px 10px;
-    font-size: 24px;
+    font-size: 12px;
 }
 
 .skin-purple .main-sidebar {
@@ -72,3 +72,58 @@
     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
 }
+
+
+/* define the appearance of datatable output*/
+.dataTables_wrapper {
+  background-color: white;
+  color: #6495ED;
+  font-size: 12px;
+}
+
+
+
+/* specify checkbox appearance */
+
+input[type="checkbox"]:before, input[type="checkbox"]:checked:before {
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  line-height:15px;
+  text-align:center;
+  color:#fff;
+  content: '✘';
+}
+
+input[type="checkbox"]:checked {
+ background-color:green;
+}
+
+input[type="checkbox"]:checked:before {
+  content: '✔';
+}
+
+/* specify the appearance of radio button*/
+
+input[type="radio"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  /* create custom radiobutton appearance */
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  /* background-color only for content */
+  background-clip: content-box;
+  border: 3px solid white;
+  background-color: #e7e6e7;
+  border-radius: 50%;
+}
+/* appearance for checked radiobutton */
+input[type="radio"]:checked {
+  background-color: #CBB051;
+}
+
+
